# cabal-sys-lib-dir-issue

./: .gitignore  ISSUE.md  Main.hs  README.md  cabal.project  demo.cabal
dep-clang/: DepClang.hsc  configure  configure.ac  dep-clang.buildinfo.in  dep-clang.cabal
dep-clang/cbits/: clang_version.h
dep-z/: DepZ.hs  dep-z.cabal
